# veratheon-research

./: .dockerignore  .env.example  .env_template  .gitignore  CLAUDE.md  Dockerfile  README.md  call_api.py  comprehensive-report-generation-plan.md  delete_useless_python_files.sh  docker-compose.yml  eps-validation-prework-todo.md  fly.toml  grok_data_sources.md  grok_research_steps.md  main.py  mypy.ini  prefect.toml  pyproject.toml  redis.conf  register_deployments.py  research_ideas.md  research_plan.txt  run.py  run.sh  run_api.py  server.py  test_websocket.html  todo.md
.prefect/: settings.toml
.windsurf/rules/: architecture.md
agent-ui/: package-lock.json  package.json  vite.config.ts
docs/ai_todo_lists/: codebase_style_improvements.md  comprehensive-report-generation-plan.md  potential_hallucinations.md  redis-to-supabase-migration-plan.md  research_job_crash_plan.md
docs/complete/: eps-validation-prework-todo.md  eps_feature_style_fix_plan.md  eps_feature_style_mismatch.md
docs/research/: grok_data_sources.md  research_ideas.md
output/AAPL/: company_overview_analysis.json  company_overview_analysis.md  global_quote_data.json  global_quote_data.md
output/INVALID/: company_overview_analysis.json  company_overview_analysis.md  global_quote_data.json  global_quote_data.md
server/: api.py
src/: main.py  reseacher.py  researcher.py
src/agent_assets/: resources.py  tools.py
src/agent_tools/: alpha_vantage_tool.py  file_report_tool.py
src/api/: main.py
src/clients/: alpha_vantage_client.py
src/company_research/: company_nuanced_planner.py  macroeconomic_analyst.py  price_target_intake.py
src/deployments/: __init__.py
src/flows/: __init__.py  research_flow.py
src/jobs/: cleanup_expired_cache.py  cleanup_old_jobs.py  cleanup_old_logs.py
src/lib/: alpha_vantage_agent_tools.py  alpha_vantage_api.py  eps_validation_cache_utils.py  eps_validation_data_cleaning.py  events.py  fiscal_year_utils.py  job_tracker.py  llm_model.py  redis_cache.py  (+5 more)
tests/: conftest.py
(+217 files in other folders)
