[project]
name = "market-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage",
    "dotenv>=0.9.9",
    "numpy>=2.2.5",
    "openai-agents>=0.0.14",
    "pandas>=2.2.3",
    "python-dotenv>=0.21.0",
]
