[project]
name = "market-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage",
    "dotenv>=0.9.9",
    "litellm>=1.75.4",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "openai-agents>=0.0.14",
    "pandas>=2.2.3",
    "prefect>=3.4.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=0.21.0",
    "rich>=14.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]


[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
