[project]
name = "market-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "litellm>=1.75.4",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "openai-agents>=0.0.14",
    "pandas>=2.2.3",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=0.21.0",
    "redis>=6.4.0",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Async tests"
]


[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
]
